tests/paczka1/small_fuzzy/57317395.err
Error in line 2: XZfO A151 48,0
Error in line 3: XZfO S104 65,4
Error in line 7: XZfO A151 87,9
Error in line 10: AsZfZE A151 98,0
Error in line 8: XZfO S104 76,0
